prow/control-plane/ingress.yaml
# Copyright 2025 The Tekton Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    dns.gardener.cloud/dnsnames: prow.infra.tekton.dev
    dns.gardener.cloud/ttl: "3600"
  name: prow
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - secretName: prow-tekton-dev-tls
    hosts:
    - prow.infra.tekton.dev
  rules:
  - host: prow.infra.tekton.dev
    http:
      paths:
      - backend:
          service:
            name: hook
            port:
              number: 8888
        path: /hook
        pathType: Prefix
      - backend:
          service:
            name: deck
            port:
              number: 80
        path: /
        pathType: Prefix
